--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "formik": "^2.1.3",
+    "framer-motion": "^1.8.4",
     "parse": "^2.11.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
