--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1",
+    "react-select": "^3.0.8",
+    "react-select-search": "^1.0.2",
     "sweetalert": "^2.1.2",
     "yup": "^0.28.1"
   },
