--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "yup": "^0.28.1"
   },
   "scripts": {
+    "deploy": "react-scripts build && firebase deploy",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
