--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "parse": "^2.11.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-infinite-scroll-component": "^5.0.4",
     "react-scripts": "3.3.1",
     "sweetalert": "^2.1.2",
     "yup": "^0.28.1"
