--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-router": "^6.0.0-alpha.2",
+    "react-router-dom": "^6.0.0-alpha.2",
     "react-scripts": "3.3.1",
     "sweetalert": "^2.1.2",
     "yup": "^0.28.1"
