--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/user-event": "^7.2.1",
     "formik": "^2.1.3",
     "framer-motion": "^1.8.4",
+    "moment": "^2.24.0",
     "parse": "^2.11.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-moment": "^0.9.7",
     "react-router": "^6.0.0-alpha.2",
     "react-router-dom": "^6.0.0-alpha.2",
     "react-scripts": "3.3.1",
