--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-HTTPS = true
+
+REACT_APP_ID = OUr4laQTLAlCcXBV8uJcEDilfeK42siE5FKEuSC5
+
+REACT_APP_JAVASCRIPT_KEY = sFgerkhqDaXERMxKLI7k7ccD4dZBkH78yo8gd4n3
