--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^7.13.2",
     "formik": "^2.1.3",
     "framer-motion": "^1.8.4",
     "moment": "^2.24.0",
