--- a/package.json
+++ b/package.json
@@ -3,11 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@editorjs/code": "^2.4.1",
+    "@editorjs/delimiter": "^1.1.0",
+    "@editorjs/embed": "^2.2.1",
+    "@editorjs/header": "^2.4.0",
+    "@editorjs/image": "^2.3.3",
+    "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/link": "^2.1.3",
+    "@editorjs/list": "^1.4.0",
+    "@editorjs/quote": "^2.3.0",
+    "@editorjs/raw": "^2.1.2",
+    "@editorjs/simple-image": "^1.3.3",
+    "@editorjs/table": "^1.2.2",
     "@reach/router": "^1.3.1",
     "@sweetalert/with-react": "^0.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "Dante2": "^0.5.0-rc4",
     "firebase": "^7.13.2",
     "formik": "^2.1.3",
     "framer-motion": "^1.8.4",
@@ -15,6 +28,8 @@
     "parse": "^2.11.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-draft-wysiwyg": "^1.14.4",
+    "react-html-parser": "^2.0.2",
     "react-infinite-scroller": "^1.2.4",
     "react-moment": "^0.9.7",
     "react-router": "^6.0.0-alpha.2",
@@ -44,5 +59,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@editorjs/checklist": "^1.1.0",
+    "@editorjs/editorjs": "^2.17.0",
+    "@editorjs/paragraph": "^2.6.1",
+    "react-editor-js": "^1.5.0"
   }
 }
